--- a/vignettes/flexsurv.Rnw
+++ b/vignettes/flexsurv.Rnw
@@ -52,13 +52,18 @@ render_sweave()
   \pkg{mstate} package \citep{mstate:jss}.  This article explains the
   methods and design principles of the package, giving several worked
   examples of its use. 
-
-\emph{[Note: A version of this vignette is published as \citet{flexsurv} in Journal of Statistical Software. There have been no substantial changes since.]}
-}
+\emph{[Note: A version of this vignette is published as
+  \citet{flexsurv} in Journal of Statistical Software.  All content
+  there is included here.  There have been no substantial changes in
+  the survival modelling parts since then.  Version 2.0 of \pkg{flexsurv}
+  added new features for multi-state modelling, and since that version,
+  multi-state modelling with \pkg{flexsurv} has been described in a separate
+  vignette.]}}
 
 \Keywords{survival, multi-state models, multistate models}
 
 \begin{document}
+%\SweaveOpts{concordance=TRUE}
 
 \section{Motivation and design}
 
@@ -121,9 +126,10 @@ based on.  \S\ref{sec:models} gives examples of its use for fitting
 built-in survival distributions with a fixed number of parameters, and
 \S\ref{sec:custom} explains how users can define new distributions.
 \S\ref{sec:adim} concentrates on classes of models where the number of
-parameters can be chosen arbitrarily, such as splines.  In
-\S\ref{sec:multistate} \pkg{flexsurv} is used for fitting and predicting from 
-fully-parametric multi-state models.  Finally \S\ref{sec:extensions}
+parameters can be chosen arbitrarily, such as splines.  
+\S\ref{sec:multistate} mentions the use of \pkg{flexsurv} for fitting and predicting from 
+fully-parametric multi-state models, which is described more fully in
+a separate vignette.  Finally \S\ref{sec:extensions}
 suggests some potential future extensions.
 
 
@@ -1137,450 +1143,23 @@ A \emph{multi-state model} represents how an individual moves between
 multiple states in continuous time.  Survival analysis is a special case
 with two states, ``alive'' and ``dead''.  \emph{Competing risks} are a
 further special case, where there are multiple causes of death, that
-is, one starting state and multiple possible destination states.  
+is, one starting state and multiple possible destination states.
 
-Given that an individual is in state $X(t)$ at time $t$, their next
-state, and the time of the change, are governed by a set of
-\emph{transition intensities}
-\[q_{rs}(t,\mathbf{z}(t),\mathcal{F}_t) = \lim_{\delta t \rightarrow 0} \Prob(X(t+\delta t) = s | X(t) = r, \mathbf{z}(t), \mathcal{F}_t) / \delta t \] 
-for states $r, s = 1,\dots,R$, which for a survival model
-are equivalent to the hazard $h(t)$.  The intensity represents the
-instantaneous risk of moving from state $r$ to state $s$, and is 
-zero if the transition is impossible.  It may
-depend on covariates $\mathbf{z}(t)$, the time $t$ itself, and possibly also the ``history'' of
-the process up to that time, $\mathcal{F}_t$: the states previously
-visited or the length of time spent in them.
+Multi-state modelling with \pkg{flexsurv} was previously described in
+this section of the current vignette.   Version 2.0 of \pkg{flexsurv}
+added several new features for multi-state modelling, including
+multi-state modelling using mixtures, and transition-specific
+distribution families in cause-specific hazards models.   
+These models are now fully described in a separate \pkg{flexsurv} vignette, 
+``Flexible parametric multi-state modelling with the flexsurv package''. 
 
-\paragraph{Data} Instead of a single event time, there may now be a
-series of event times $t_{1},\dots, t_{n}$ for an individual, corresponding to changes of state.  The
-last of these may be an observed or right-censored event time.  Note
-\emph{panel data} are not considered here --- that is, observations of
-the state of the process at an arbitrary set of times
-\citep{kalbfleisch:lawless}.  In panel data, we do not necessarily
-know the time of each transition, or even whether transitions of
-a certain type have occurred at all between a pair of observations.
-Multi-state models for that type of data (and also exact event times)
-can be fitted with the \pkg{msm} package for \proglang{R} \citep{msmjss}, but are
-restricted to (piecewise) exponential event time distributions.  Knowing
-the exact event times enables much more flexible models, which 
-\pkg{flexsurv} can fit. 
-
-\paragraph{Alternative time scales} 
-In semi-Markov (``clock-reset'') models, $q_{rs}(t)$ is defined as a 
-function of the time $t$ since entry into the current state.  Any 
-software to fit survival models can also fit this kind of multi-state model, as the following sections will explain. 
-
-In an inhomogeneous Markov model, $t$ represents the
-time since the beginning of the process (that is, a ``clock-forward'' 
-scale is used), but the intensity $q_{rs}(t)$
-does not depend further on $\mathcal{F}_t$.  Again, standard survival
-modelling software can be used, with the additional requirement that
-it can deal with left-truncation or \emph{counting process} data, which 
-\code{survreg}, for example, does not currently support.
-
-These approaches are equivalent for competing risks models, since
-there is at most one transition for each individual, so that the time
-since the beginning of the process equals the time spent in the
-current state.  Therefore no left-truncation is necessary.
-
-Note also that in a clock-reset model, the time since the beginning of
-the process may enter the model as a covariate.  Likewise, in a
-clock-forward model, the time spent in the current state may enter as
-a covariate, in which case the model is no longer Markov.
-
-\paragraph{Example} For illustration, consider a simple three-state
-example, previously studied by \citet{heng:paper}. Recipients of lung
-transplants are are risk of bronchiolitis obliterans syndrome (BOS).
-This was defined as a decrease in lung function to below 80\% of a
-baseline value defined in the six months following transplant.  A
-three-state ``illness-death'' model represents the risk of developing
-BOS, the risk of dying before developing BOS, and the risk of death
-after BOS.  BOS is assumed to be irreversible, so there are only three
-allowed transitions (Figure \ref{fig:bosmsm}), each with an intensity
-function $q_{rs}(t)$.
-
-\begin{figure}[h]
-  \centering
-  \scalebox{0.6}{\includegraphics{bosmsm.pdf}}
-  \caption{Three-state multi-state model for bronchiolitis obliterans syndrome (BOS).}
-  \label{fig:bosmsm}
-\end{figure}
-
-\subsection{Representing multi-state data as survival data}
-\label{sec:multistate:data}
-
-\citet{andersen:keiding} and \citet{putter:mstate} explain how to implement multi-state models by
-manipulating the data into a suitable form for survival modelling
-software --- an overview is given here.  For each permitted $r
-\rightarrow s$ transition in the multi-state model, there is a
-corresponding ``survival'' (time-to-event) model, with hazard rates
-defined by $q_{rs}(t)$.  For a patient who enters state $r$ at
-time $t_{j}$, their next event at $t_{j+1}$ is defined by the model
-structure to be one of a set of competing events $s_1,\ldots,s_{n_r}$.
-This implies there are $n_r$ corresponding survival models for this
-state $r$, and $\sum_r n_r$ models over all states $r$.
-In the BOS example, there are $n_1=2,n_2=1$ and $n_3=0$ possible
-transitions from states 1, 2 and 3 respectively.
-
-The data to inform the $n_r$ models from state $r$ consists firstly of an
-indicator for whether the transition to the corresponding state
-$s_1,\ldots,s_{n_r}$ is observed or censored at $t_{j+1}$.  If the
-individual moves to state $s_k$, the transitions to all other
-states in this set are censored at this time. This indicator is 
-coupled with:
-\begin{itemize}
-\item (for a semi-Markov model) the time elapsed $dt_{j} = t_{j+1} -
-  t_{j}$ from state $r$ entry to state $s$ entry.  
-  The ``survival'' model for the $r \rightarrow s$ transition is 
-  fitted to this time. 
-  
-\item (for an inhomogeneous Markov model) the start and stop time
-  $(t_j,t_{j+1})$, as in \S\ref{sec:censtrunc}.  
-  The $r \rightarrow s$ model is fitted to the
-  right-censored time $t_{j+1}$ from the \emph{start of the process},
-  but is conditional on not experiencing the $r \rightarrow s$
-  transition until after the state $r$ entry time.  In other words,
-  the $r \rightarrow s$ transition model is \emph{left-truncated} at
-  the state $r$ entry time.
-\end{itemize}
-
-In this form, the outcomes of two patients in the BOS data are
-<<>>=
-bosms3[18:22, ]
-@
-
-Each row represents an observed (\code{status = 1}) or censored
-(\code{status = 0}) transition time for one of three time-to-event
-models indicated by the categorical variable \code{trans} (defined as
-a factor).  Times are expressed in years, with the baseline time 0
-representing six months after transplant.  Values of \code{trans} of
-1, 2, 3 correspond to no BOS$\rightarrow$BOS, no BOS$\rightarrow$death
-and BOS$\rightarrow$death respectively.  The first row indicates that
-the patient (\code{id} 7) moved from state 1 (no BOS) to state 2 (BOS)
-at 0.17 years, but (second row) this is also interpreted as a
-censored time of moving from state 1 to state 3, potential death before BOS
-onset.  This patient then died, given by the third row with
-\code{status} 1 for \code{trans} 3.  Patient 8 died before BOS onset,
-therefore at 8.2 years their potential BOS onset is censored (fourth
-row), but their death before BOS is observed (fifth row).
-
-The \pkg{mstate} \proglang{R} package \citep{mstate:cmpb,mstate:jss} has a
-utility \code{msprep} to produce data of this form from
-``wide-format'' datasets where rows represent individuals, and times
-of different events appear in different columns. \pkg{msm}
-has a similar utility \code{msm2Surv} for producing the
-required form given longitudinal data where rows represent state
-observations.
-
-\subsection{Multi-state model likelihood}
-\label{sec:multistate:lik}
-
-After forming survival data as described above, a multi-state model
-can be fitted by maximising the standard survival model
-likelihood~(\ref{eq:lik}), $l(\bm{\theta} | \mathbf{x}) = \prod_i
-l_i(\bm{\theta}|x_i)$, where $\mathbf{x}$ is the data, and $i$ now
-indexes multiple observations for multiple individuals.  This can also
-be written as a product over the $K=\sum_r n_r$ transitions $k$, and
-the $m_k$ observations $j$ pertaining to the $k$th transition.  The
-transition type will typically enter this model as a categorical
-covariate --- see the examples in the next section.
-
-\begin{equation}
-  \label{eq:lik:multistate}
-  l(\bm{\theta} | \mathbf{x}) = \prod_{k=1}^K \prod_{j=1}^{m_k} l_{jk}(\bm{\theta}|\mathbf{x}_{jk}) 
-\end{equation}
-
-Therefore if the parameter vector $\bm{\theta}$ can be partitioned
-as $(\bm{\theta}_1|\ldots|\bm{\theta}_K)$, independent components for
-each transition $k$, the likelihood becomes the product of $K$
-independent transition-specific likelihoods \citep{andersen:keiding}.
-The full multi-state model can then be fitted by maximising each of
-these independently, using $K$ separate calls to a survival modelling
-function such as \code{flexsurvreg}.  This can give vast computational
-savings over maximising the joint likelihood for $\bm{\theta}$ with a
-single fit.  For example, \citet{francesca:smmr} used \pkg{flexsurv}
-to fit a parametric multi-state model with 21 transitions and 84
-parameters for over 30,000 observations, which was computationally
-impractical via the joint likelihood, whereas it only took about a minute
-to perform 21 transition-specific fits.
-
-On the other hand, if any parameters are constrained between
-transitions (e.g. if hazards are proportional between transitions, or
-the effects of covariates on different transitions are the same) then
-it is necessary to maximise the joint
-likelihood~(\ref{eq:lik:multistate}) with a single call. 
-
-
-\subsection{Fitting parametric multi-state models}
-\label{sec:multistate:fitting}
-
-\paragraph{Joint likelihood} 
-
-Three multi-state models are fitted to the BOS data using \code{flexsurvreg}, firstly using a single 
-likelihood maximisation for each model.   The
-first two use the ``clock-reset'' time scale.  \code{crexp}
-is a simple time-homogeneous Markov model where all transition
-intensities are constant through time, so that the clock-forward and
-clock-reset scales are identical.  The time to the next event is
-exponentially-distributed, but with a different rate $q_{rs}$ for each
-transition type \code{trans}.  \code{crwei} is a semi-Markov model where
-the times to BOS onset, death without BOS and the time from BOS onset
-to death all have Weibull distributions, with a different shape and
-scale for each transition type.  \code{cfwei} is a clock-forward,
-inhomogeneous Markov version of the Weibull model: the 1$\rightarrow$2
-and 1$\rightarrow$3 transition models are the same, but the third has
-a different interpretation, now the time \emph{from baseline} to death
-with BOS has a Weibull distribution.  
-<<>>=
-crexp <- flexsurvreg(Surv(years, status) ~ trans, data = bosms3, 
-                     dist = "exp")
-crwei <- flexsurvreg(Surv(years, status) ~ trans + shape(trans), 
-                     data = bosms3, dist = "weibull")
-cfwei <- flexsurvreg(Surv(Tstart, Tstop, status) ~ trans + shape(trans), 
-                     data = bosms3, dist = "weibull")
-@ 
-
-\paragraph{Semi-parametric equivalents} 
-The equivalent Cox models are also fitted using
-\code{coxph} from the \pkg{survival} package.  These specify a
-different baseline hazard for each transition type through a function
-\code{strata} in the formula, so since there are no other covariates,
-they are essentially non-parametric.  Note that the \code{strata} function
-is not currently understood by \code{flexsurvreg} --- the user must say
-explicitly what parameters, if any, vary with the transition type,
-as in \code{crwei}.
-<<>>=
-crcox <- coxph(Surv(years, status) ~ strata(trans), data = bosms3)
-cfcox <- coxph(Surv(Tstart, Tstop, status) ~ strata(trans), data = bosms3)
-@ 
-In all cases, if there were other covariates, they could simply be
-included in the model formula.  Typically, covariate effects will vary
-with the transition type, so that an interaction term with
-\code{trans} would be included.  Some post-processing might then be
-needed to combine the main covariate effects and interaction terms
-into an easily-interpretable quantity (such as the hazard ratio for
-the $r,s$ transition).  Alternatively, \pkg{mstate} has a utility
-\code{expand.covs} to expand a single covariate in the data into a set
-of transition-specific covariates, to aid interpretation
-\citep[see][]{mstate:jss}.
-
-\paragraph{Transition-specific models}
-
-In this small example, the joint likelihood can be maximised easily
-with a single function call, but for larger models and datasets, this
-may be unfeasible.  A more computationally-efficient approach is to
-fit a list of transition-specific models, as follows.
-<<>>=
-crwei.list <- vector(3, mode="list")
-for (i in 1:3) 
-    crwei.list[[i]] <- flexsurvreg(Surv(years, status) ~ 1, 
-                                   subset=(trans==i),  data = bosms3, 
-                                   dist = "weibull")
-@ 
-This list of \code{flexsurvreg} objects can be supplied as the first
-argument to the output and prediction functions described in the
-subsequent sections, instead of a single \code{flexsurvreg} object. 
-However, this approach is not possible if there are constraints in the
-parameters across transitions, such as common covariate effects.
-
-\begin{sloppypar}
-Any parametric distribution can be employed in a multi-state model, just as for standard
-survival models, with \code{flexsurvreg}.  Spline models may also be
-fitted with \code{flexsurvspline}, and if hazards are assumed
-proportional, they are expected to give similar results to the Cox
-model.  Since \pkg{flexsurv} version 1.2, different parametric
-families can be used for different transitions, though in earlier 
-versions, the same family had to be used. 
-\end{sloppypar}
-
-\subsection{Obtaining cumulative transition-specific hazards}
-
-Multi-state models are often characterised by their cumulative $r
-\rightarrow s$ transition-specific hazard functions $H_{rs}(t)
-= \int_0^t q_{rs}(u)du$.  For \emph{semi-parametric}
-multi-state models fitted with \code{coxph}, the function \code{msfit}
-in \pkg{mstate} \citep{mstate:cmpb,mstate:jss} provides
-piecewise-constant estimates and covariances for $H_{rs}(t)$.
-For the Cox models for the BOS data,
-<<>>=
-require("mstate")
-tmat <- rbind(c(NA, 1, 2), c(NA, NA, 3), c(NA, NA, NA))
-mrcox <- msfit(crcox, trans = tmat)
-mfcox <- msfit(cfcox, trans = tmat)
-@
-\code{tmat} describes the transition structure, as a matrix of
-integers whose $r,s$ entry is $i$ if the $i$th transition type is
-$r,s$, and has \code{NA}s on the diagonal and where the $r,s$
-transition is disallowed.
-
-\pkg{flexsurv} provides an analogous function \code{msfit.flexsurvreg}
-to produce cumulative hazards from \emph{fully-parametric} multi-state
-models in the same format.  This is a short wrapper around
-\code{summary.flexsurvreg(..., type = "cumhaz")}, previously mentioned
-in \S\ref{sec:plots}.  The difference from \pkg{mstate}'s method is
-that hazard estimates can be produced for any grid of times \code{t},
-at any level of detail and even beyond the range of the data, since
-the model is fully parametric. The argument \code{newdata} can be used
-in the same way to specify a desired covariate category, though in
-this example there are no covariates in addition to the transition
-type.  The name of the (factor) covariate indicating the transition
-type can also be supplied through the \code{tvar} argument, in this
-case it is the default, \code{"trans"}.
-<<>>=
-tgrid <- seq(0, 14, by = 0.1)
-mrwei <- msfit.flexsurvreg(crwei, t = tgrid, trans = tmat)
-mrexp <- msfit.flexsurvreg(crexp, t = tgrid, trans = tmat)
-mfwei <- msfit.flexsurvreg(cfwei, t = tgrid, trans = tmat)
-@
-These can be plotted (Figure \ref{fig:bos:cumhaz}) to show the fit of
-the parametric models compared to the non-parametric estimates.  Both
-models appear to fit adequately, though give diverging extrapolations
-after around 6 years when the data become sparse.  The Weibull
-clock-reset model has an improved AIC of \Sexpr{round(crwei$AIC)}, compared to
-\Sexpr{round(crexp$AIC)} for the exponential model.  For the $2\rightarrow 3$ transition,
-the clock-forward and clock-reset models give slightly
-different hazard trajectories.
-<<cumhaz,include=FALSE>>=
-cols <- c("black", "#E495A5", "#86B875", "#7DB0DD") # colorspace::rainbow_hcl(3)
-plot(mrcox, xlab = "Years after baseline", lwd = 3, xlim = c(0, 14), cols = cols[1:3])
-for (i in 1:3){
-    lines(tgrid, mrexp$Haz$Haz[mrexp$Haz$trans == i], col = cols[i], lty = 2, lwd = 2)
-    lines(tgrid, mrwei$Haz$Haz[mrwei$Haz$trans == i], col = cols[i], lty = 3, lwd = 2)
-}
-lines(mfcox$Haz$time[mfcox$Haz$trans == 3], mfcox$Haz$Haz[mfcox$Haz$trans == 3],
-      type = "s", col = cols[4], lty = 1, lwd = 2)
-lines(tgrid, mfwei$Haz$Haz[mfwei$Haz$trans == 3], col = cols[4], lty = 3, lwd = 2)
-legend("topleft", inset = c(0, 0.2), lwd = 2, col = cols[4], 
-       c("2 -> 3 (clock-forward)"), bty = "n")
-legend("topleft", inset = c(0, 0.3), c("Non-parametric", "Exponential", "Weibull"),
-       lty = c(1, 2, 3), lwd = c(3, 2, 2), bty = "n")
-@ 
-\begin{figure}[h]
-\includegraphics{flexsurv-cumhaz-1}
-\caption{Cumulative hazards for three transitions in the BOS multi-state model (clock-reset), under non-parametric, exponential and Weibull models.  For the  $2\rightarrow 3$ transition, an alternative clock-forward scale is shown for the non-parametric and Weibull models.} 
-\label{fig:bos:cumhaz}
-\end{figure}
-
-\subsection{Prediction from parametric multi-state models}
-
-The \emph{transition probabilities} of the multi-state model are the
-probabilities of occupying each state $s$ at time $t > t_0$, given
-that the individual is in state $r$ at time $t_0$.
-\[ P(t_0, t) = \Prob(X(t) = s | X(t_0) = r) \]
-
-\paragraph{Markov models}
-For a time-inhomogeneous Markov model, these are related to the transition
-intensities via the Kolmogorov forward equation
-\[ \frac{d P(t_0,t)}{dt} = P(t_0,t) Q(t) \] with initial condition
-$P(t_0,t_0) = I$ \citep{cox:miller}.  This can be solved numerically, as in
-\citet{titman:nonhomog}.  This is implemented in the function
-\code{pmatrix.fs}, using the \pkg{deSolve} package \citep{deSolve}.
-This returns the full transition probability matrix $P(t_0,t)$ from
-time $t_0=0$ to a time or set of times $t$ specified in the call.
-Under the Weibull model, the probability 
-of remaining alive and free
-of BOS is estimated at 0.3 at 5 years and 0.09 at 10 years: 
-<<>>=
-pmatrix.fs(cfwei, t = c(5, 10), trans = tmat)
-@ 
-Confidence intervals can be obtained by simulation from the
-asymptotic distribution of the maximum likelihood estimates --- see
-\code{help(pmatrix.fs)} for full details.  A similar function
-\code{totlos.fs} is provided to estimate the expected total
-amount of time spent in state $s$ up to time $t$ for a process that
-starts in state $r$, defined as $\int_{u=0}^tP(0,u)_{rs}du$.
-
-\paragraph{Semi-Markov models} 
-For semi-Markov models, the Kolmogorov equation does not apply, since
-the transition intensity matrix $Q(t)$ is no longer a deterministic
-function of $t$, but depends on when the transitions occur between
-time $t_0$ and $t$. Predictions can then be made by simulation.
-The function \code{sim.fmsm} simulates trajectories from
-parametric semi-Markov models by repeatedly generating the time to the next
-transition until the individual reaches an absorbing state or a
-specified censoring time.  This requires the presence of a function to
-generate random numbers from the underlying parametric distribution
---- and is fast for built-in distributions which use vectorised
-functions such as \code{rweibull}.
-
-\code{pmatrix.simfs} calculates the transition
-probability matrix by using \code{sim.fmsm} to simulate state histories for a large number of individuals, by default 100000.  Simulation-based
-confidence-intervals are also available in \code{pmatrix.simfs}, at an
-extra computational cost, and the expected total length of stay in each state is
-available from \code{totlos.simfs}.
-<<eval=FALSE>>=
-pmatrix.simfs(crwei, trans = tmat, t = 5)
-pmatrix.simfs(crwei, trans = tmat, t = 10)
-@ 
-
-\paragraph{Prediction via mstate}
-
-Alternatively, predictions can be made by supplying the cumulative transition-specific hazards,
-calculated with \code{msfit.flexsurvreg}, to functions in the
-\pkg{mstate} package.
-
-For Markov models, the solution to the Kolmogorov equation
-\citep[e.g.,][]{aalen:process} is given by a product integral, which can be
-approximated as 
-\[ P(t_0, t) = \prod_{i=0}^{m-1} \left\{ I + Q(t_i)dt \right\} \]
-where a fine grid of times $t_0,t_1,\ldots,t_m=t$ is chosen to span
-the prediction interval, and $Q(t_i)dt$ is the increment in the
-cumulative hazard matrix between times $t_i$ and $t_{i+1}$.  $Q$ may
-also depend on other covariates, as long as these are known in
-advance.
-In \pkg{mstate}, these can be calculated with the \code{probtrans}
-function, applied to the cumulative hazards returned by \code{msfit}.
-For Cox models, the time grid is naturally defined by the observed 
-survival times, giving the
-Aalen-Johansen estimator \citep{andersen}.  Here, the probability of
-remaining alive and free of BOS is estimated at 0.27 at 5 years and 0.17
-at 10 years.  
-<<>>=
-ptc <- probtrans(mfcox, predt = 0, direction = "forward")[[1]]
-round(ptc[c(165, 193),], 3)
-@ 
-For parametric models, using a similar discrete-time approximation was
-suggested by \citet{cook:lawless}.  This
-is achieved by passing the object returned by \code{msfit.flexsurvreg}
-to \code{probtrans} in \pkg{mstate}.  It can be made arbitrarily
-accurate by choosing a finer resolution for the grid of times when 
-calling \code{msfit.flexsurvreg}.  
-<<>>=
-ptw <- probtrans(mfwei, predt = 0, direction = "forward")[[1]]
-round(ptw[ptw$time %in% c(5, 10),], 3)
-@ 
-\code{pstate1}--\code{pstate3} are close to the first rows of the
-matrices returned by \code{pmatrix.fs}.  The
-discrepancy from the Cox model is more marked at 10 years when the
-data are more sparse (Figure \ref{fig:bos:cumhaz}).  A finer time
-grid would be required to achieve a similar level of accuracy to 
-\code{pmatrix.fs} for the point estimates, at the cost of a slower run
-time than \code{pmatrix.fs}.  However, an advantage of 
-\code{probtrans} is that standard errors are available more cheaply.
-
-For semi-Markov models, \pkg{mstate} provides the function
-\code{mssample} to produce both simulated trajectories and transition
-probability matrices from semi-Markov models, given the estimated
-piecewise-constant cumulative hazards \citep{fiocco:mstatepred},
-produced by \code{msfit} or \code{msfit.flexsurvreg}, though this is
-generally less efficient than \code{pmatrix.simfs}.  In this example,
-1000 samples from \code{mssample} give estimates
-of transition probabilities that are accurate to within around 0.02.  
-However with
-\code{pmatrix.simfs}, greater precision is achieved by simulating
-100 times as many trajectories in a shorter time.  
-<<eval=FALSE>>=
-mssample(mrcox$Haz, trans = tmat, clock = "reset", M = 1000, 
-         tvec = c(5, 10))
-mssample(mrwei$Haz, trans = tmat, clock = "reset", M = 1000, 
-         tvec = c(5, 10))
-@ 
 
 \section{Potential extensions}
 \label{sec:extensions}
 
-More tools and documentation for multi-state modelling would be a
-useful addition to \pkg{flexsurv}.  The \pkg{msm} package currently
+Multi-state modelling is still an area of ongoing work, and while
+version 2.0 extended \pkg{flexsurv} in this area, more tools
+and documentation in this area would still be useful.   The \pkg{msm} package arguably
 has a more accessible interface for fitting and summarising
 multi-state models, but it was designed mainly for panel data rather
 than event time data, and therefore the event time distributions it
