--- a/vignettes/flexsurv.bib
+++ b/vignettes/flexsurv.bib
@@ -616,3 +616,72 @@
   note =	 {In press.},
   OPTannote = 	 {}
 }
+
+@article{larson1985mixture,
+  title={A mixture model for the regression analysis of competing risks data},
+  author={Larson, M. G. and Dinse, G. E.},
+  journal={Journal of the Royal Statistical Society: Series C (Applied Statistics)},
+  volume={34},
+  number={3},
+  pages={201--211},
+  year={1985},
+  annote = {} , 
+  publisher={Wiley Online Library}
+}
+
+
+@article{cox1959analysis,
+  title={The analysis of exponentially distributed life-times with two types of failure},
+  author={Cox, D. R.},
+  journal={Journal of the Royal Statistical Society: Series B (Methodological)},
+  volume={21},
+  number={2},
+  pages={411--421},
+  year={1959},
+  publisher={Wiley Online Library}
+}
+
+
+@article{aalen:johansen,
+  title={An empirical transition matrix for non-homogeneous Markov chains based on censored observations},
+  author={Aalen, O. O. and Johansen, S.},
+  journal={Scandinavian Journal of Statistics},
+  pages={141--150},
+  year={1978},
+  publisher={JSTOR}
+}
+
+
+@article{lambert2017flexible,
+  title={Flexible parametric modelling of the cause-specific cumulative incidence function},
+  author={Lambert, P. C. and Wilkes, S. R. and Crowther, M. J.},
+  journal={Statistics in Medicine},
+  volume={36},
+  number={9},
+  pages={1429--1446},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+
+@article{fine1999proportional,
+  title={A proportional hazards model for the subdistribution of a competing risk},
+  author={Fine, J. P. and Gray, R. J.},
+  journal={Journal of the American Statistical Association},
+  volume={94},
+  number={446},
+  pages={496--509},
+  year={1999},
+  publisher={Taylor \& Francis}
+}
+
+
+@article{nicolaie2010vertical,
+  title={Vertical modeling: a pattern mixture approach for competing risks modeling},
+  author={Nicolaie, M. A. and van Houwelingen, H. C. and Putter, H.},
+  journal={Statistics in Medicine},
+  volume={29},
+  number={11},
+  pages={1190--1205},
+  year={2010},
+  publisher={Wiley Online Library}
+}
