--- a/vignettes/multistate.Rnw
+++ b/vignettes/multistate.Rnw
@@ -603,7 +603,7 @@ simfinal_fmsm(crfs, probs = c(0.25, 0.5, 0.75), M=10000)
 
 \subsection{Definitions} 
 
-A ``mixture'' multi-state model, first described for competing risks models by \citep{larson1985mixture} is described in terms of: 
+A ``mixture'' multi-state model, first described for competing risks models by \citet{larson1985mixture} is described in terms of: 
 
 \begin{itemize}
 \item the probability $\pi_{rs}$ that the next state after state $r$ is state $s$
@@ -617,14 +617,14 @@ In other words, the transition intensity is defined by
     q_{rs}(t)  = \left\{
                 \begin{array}{ll}
                   q^*_{rs}(t) & \mbox{if } I_{r} = s \\
-                  0           & \mbox{if}  I_{r} \neq s\\ 
+                  0           & \mbox{if }  I_{r} \neq s\\ 
                 \end{array}
               \right.
   \]
 
 where $I_{r}$ is a latent categorical variable that determines which transition will happen next for an individual in state $r$, governed by probabilities $\pi_{r,s} = P(I_{r} = s)$, with $\sum_{s \in \mathcal{S}_r} \pi_{r,s} = 1$ over the potential next state $\mathcal{S}_r$ after state $r$.   The transition intensity $q^*_{rs}(t) $ is defined by the hazard function of a parametric distribution that governs the time $S_{rs}$ from state $r$ entry until the transition to state $s$, \emph{given that this is the transition that occurs}. 
 
-The mixture model describes a mechanism where the transition that happens is determined "in advance" at time zero, whereas in the cause-specific hazards model, the risks of different events "compete" with each other as time proceeds.  However, in practice, both models can represent situations where individuals can experience any of the competing events.  In the mixture model, we only specify a distribution for the time to the event \emph{that happens first} among the competing risks, and do not model events that don't occur.    As discussed by \citet{cox1959analysis}, if the time-to-event distributions are specified correctly in both frameworks, then they can both represent the same process.   In practice however, they will differ.   As discussed in Section~\ref{sec:nexttime}, given a particular parametric form for a set of cause-specific hazards, the form of the distribution for the \emph{minimum} of the potential event times, the one that actually happens, won't be available.   The main advantage of the mixture model is that it is parameterised in terms of quantities
+The mixture model describes a mechanism where the transition that happens is determined ``in advance" at time zero, whereas in the cause-specific hazards model, the risks of different events ``compete" with each other as time proceeds.  However, in practice, both models can represent situations where individuals can experience any of the competing events.  In the mixture model, we only specify a distribution for the time to the event \emph{that happens first} among the competing risks, and do not model events that don't occur.    As discussed by \citet{cox1959analysis}, if the time-to-event distributions are specified correctly in both frameworks, then they can both represent the same process.   In practice however, they will differ.   As discussed in Section~\ref{sec:nexttime}, given a particular parametric form for a set of cause-specific hazards, the form of the distribution for the \emph{minimum} of the potential event times, the one that actually happens, won't be available.   The main advantage of the mixture model is that it is parameterised in terms of quantities
 that have an easy, direct interpretation. 
 
 In the mixture model,  we specify a parametric distribution with density $f_{r,s}(|\theta_{r,s})$  (and  CDF $F_{r,s}()$)  for the time of transition to state $s$ for a person in state $r$, conditionally on this transition being the one that occurs.   We have data consisting of state transitions, indexed by $j$, experienced by individuals $i$.  This can either be 
@@ -651,29 +651,29 @@ The required data format for the mixture model is shown for the BOS data in the 
 \item one row for each ``end of follow-up" time where we know an individual was still at risk of making a transition, but we don't know which transition will occur.  
 \end{itemize}
 Recall that in the data \code{bosms3} used to implement the cause-specific hazards model,
-a individual ``censored" at time $t$ contributed a row in the data \emph{for each} of the events that might have occurred after $t$.   The only difference from \code{bosmx3} is that for these
-individuals, \code{bosmx3} only has \emph{one} row per ``censored" individual.  For example, patient 5 is censored at 11 years, when they were still at risk of either BOS or death. 
+a individual ``censored" at time $t$ contributed a row in the data \emph{for each} of the events that might have occurred after $t$.   The difference from \code{bosmx3} is that for these
+individuals, \code{bosmx3} only has \emph{one} row per ``censored" individual.  For example, patient 5 is censored at 11 years, when they were still at risk of either BOS or death.  Also we do not include censoring times for events competing with events that were observed, e.g. when 
+patient 4 below got BOS (state 2) at year 2, thus were ``censored" at the same time for the transition from state 1 (no BOS) to state 3 (death).
 
 The process of transforming the cause-specific dataset to the mixture dataset is shown below.  Multiple censoring records, for different destination states, are condensed to a single 
-censoring record.  Each row of \code{bosmx3} then corresponds to a transition.   A new column called \code{event} is created, which identifies the terminal event of the transition,  which takes the value \code{NA} in cases of censoring where the transition that will happen is unknown.   Columns not needed for the mixture model are removed.  Labels are added to identify the states. 
-
+censoring record.  Each row of \code{bosmx3} then corresponds to a transition.   A new column called \code{event} is created, which should be a factor that identifies the terminal event of the transition,  which takes the value \code{NA} in cases of censoring where the transition that will happen is unknown.   Columns not needed for the mixture model are removed.  Informative labels for the factor levels of \code{event} are added to identify the states. 
 
 <<>>=
-bosms3[bosms3$id==5,]
+bosms3[bosms3$id  %in% c(4,5),]
 bosmx3 <- bosms3
 bosmx3$Tstart <- bosmx3$Tstop <- bosmx3$trans <- NULL
 bosmx3 <- bosmx3[!(bosmx3$status==0 & duplicated(paste(bosmx3$id, bosmx3$from))),]
 bosmx3$event <- ifelse(bosmx3$status==0, NA, bosmx3$to)
 bosmx3$event <- factor(bosmx3$event, labels=c("BOS","Death"))
 bosmx3$to <- NULL
-bosmx3[bosmx3$id==5,]
+bosmx3[bosmx3$id %in% c(4,5),]
 @
 
 \subsection{Fitting mixture competing risks models}
 
-The \code{flexsurvmix} function fits a mixture model to competing risks data.  To fit a full multi-state mixture model, we fit one mixture competing risks model for each transient state.  The models are then grouped together (Section~\ref{sec:fmixmsm}) to form the full multi-state model.  
+The \code{flexsurvmix} function fits a mixture model to competing risks data.  To fit a full multi-state mixture model, we fit one mixture competing risks model for each transient state in the multi-state structure.  The models are then grouped together (Section~\ref{sec:fmixmsm}) to form the full multi-state model.  
 
-The mixture model for the event following transplant (BOS or death before BOS, the 1-2 and 1-3 transitions in the multi-state model) is fitted as follows.  A Weibull distribution is fitted for the time to BOS given BOS onset, and an exponential distribution is fitted for the time to death given death before BOS onset.  These distributions are specified in the \code{dists} argument.  The same distributions as in \code{flexsurvreg} are supported (including custom distributions, in the same way). 
+The mixture model for the event following transplant (BOS or death before BOS, the 1-2 and 1-3 transitions in the multi-state structure) is fitted as follows.  A Weibull distribution is fitted for the time to BOS given BOS onset, and an exponential distribution is fitted for the time to death given death before BOS onset.  These distributions are specified in the \code{dists} argument.  The same distributions as in \code{flexsurvreg} are supported (including custom distributions, in the same way). 
 
 <<>>=
 bosfs <- flexsurvmix(Surv(years, status) ~ 1, event=event, 
@@ -685,8 +685,7 @@ bosfs
 
 The printed results object shows the two event probabilities $\pi_{rs}$ in the first two rows, 
 and the parameters of the time-to-event distributions in the remaining rows.  
-The maximum likelihood estimates are in column \code{est}, and estimates on a logit or log
-transformed scale are in column \code{est.t} with standard errors on the transformed scale in \code{se}. 
+The maximum likelihood estimates are in column \code{est}, and estimates on a (multinomial) logit or log transformed scale are in column \code{est.t}, with standard errors on the transformed scale in \code{se}. 
 
 Covariates can be included on the event probabilities through multinomial logistic regression.  For illustration, we just simulate some fake covariate data in the variable \code{x}.  The log odds ratio for this covariate on the odds of death (with the first category, BOS here, always taken as the baseline) is shown in the row with \code{terms} labelled \code{prob2(x)}. 
 
@@ -771,7 +770,7 @@ p_flexsurvmix(bosfst, t=c(5, 10), B=10, startname="No BOS")
 We supplement the mixture model for the event following state 1 (no BOS) with a second model \code{bosfst_bos} for the events following BOS (the other transient state in the multi-state model).   Although this is fitted with \code{flexsurvmix}, there is only one potential next state after BOS, which is death, so internally this just fits a standard survival model using \code{flexsurvreg}.   
 
 The two mixture models are then coupled together using the \code{fmixmsm} function, which returns 
-an object containing the entire multi-state model, here named \code{bosfmix}.  This object contains attributes listing the potential pathways that an individual can take through the states.  These pathways are identified automatically by naming the arguments to \code{fmixmsm} with the label of the state that each model describes transitions from --- here the first model \code{bosfst} describes transitions from ``No BOS" and the second describes transitions from BOS. 
+an object containing the entire multi-state model, here named \code{bosfmix}.  This object contains attributes listing the potential pathways that an individual can take through the states.  These pathways are identified automatically by naming the arguments to \code{fmixmsm} with the label of the state that each model describes transitions from --- here the first model \code{bosfst} describes transitions from ``No BOS" and the second describes transitions from BOS. (Note we redefine the \code{event} factor so that empty levels are dropped)
 
 <<>>=
 bdat <- bosmx3[bosmx3$from==2,]
@@ -804,7 +803,7 @@ meanfinal_fmixmsm(bosfmix, B=10, final=TRUE)
 The fit of mixture competing risks models can be checked by comparing predictions of the state occupancy probabilities (as returned by \code{p_flexsurvmix}) with nonparametric estimates of these quantities \citep{aalen:johansen}.  This is only supported for models with no covariates or only factor covariates (where subgroup-specific predictions are compared with stratified nonparametric estimates).  The function \code{ajfit_flexsurvmix} derives these 
 estimates from both the mixture model and the Aalen-Johansen method, and collects them in a tidy data frame ready for plotting, e.g. with the \pkg{ggplot2} package.  
 
-The mixture models fit nicely here. Note a \code{start} argument is supplied to give an informative label in the plots to the starting state. 
+The mixture models fit nicely here.  A \code{start} argument is supplied to give an informative label to the starting state in the plots.  Note we are plotting not probability of \emph{being in} a state at time $t$, but the probability of \emph{having made} the respective transition --- here we are checking the competing risks submodels one at time. 
 
 <<fig.height=3>>=
 aj <- ajfit_flexsurvmix(bosfs, start="No BOS")
@@ -814,11 +813,32 @@ aj2 <- ajfit_flexsurvmix(bosfs_bos, start="BOS")
 library(ggplot2)
 ggplot(aj, aes(x=time, y=val, lty=model, col=state)) + 
   geom_line() +  
-  xlab("Years after transplant") + ylab("Probability of being in state")
+  xlab("Years after transplant") + ylab("Probability of having moved to state")
 ggplot(aj2, aes(x=time, y=val, lty=model, col=state)) + 
-  xlab("Years after transplant") + ylab("Probability of being in state") +
+  xlab("Years after transplant") + ylab("Probability of having moved to state") +
   geom_line()
 @
+
+Checking against Aalen-Johansen estimates is also supported for cause-specific 
+hazards models that are grouped together using \code{fmsm}.   Thus we can compare 
+cause-specific hazards and mixture models that have been fitted to the same data. 
+We do this here for the \code{fmsm} object \code{crfs_nobos} created in Section~\ref{sec:nextstate}.
+
+<<message=FALSE>>=
+library(dplyr)
+
+aj3 <- ajfit_fmsm(crfs_nobos) %>%
+  filter(model=="Parametric") %>%
+  mutate(model = "Cause specific hazards") %>%
+  mutate(state = factor(state, labels=c("No BOS","BOS","Death"))) %>%
+  full_join(aj) 
+
+ggplot(aj3, aes(x=time, y=val, lty=model, col=state)) + 
+  xlab("Years after transplant") + ylab("Probability of having moved to state") +
+  geom_line()
+@
+
+
 
 
 \section{Comparison of frameworks for parametric multi-state modelling}
