Changes for v2.0 release

--- a/TODO
+++ b/TODO
@@ -1,3 +1,14 @@
+GET RID OF THOSE WARNINGS
+
+validate_inputs function before calling pexp, dexp to evaluate likelihood
+
+
+
+
+
+
+
+
 #  flexsurvmix
 
 bring pfinal back or delete tests 
